fix:Add fix for single featured post aligned center

--- a/src/components/Investor/InvestorGlobalCards/MilestoneCard/style.scss
+++ b/src/components/Investor/InvestorGlobalCards/MilestoneCard/style.scss
@@ -2,7 +2,7 @@
   display: flex;
   gap: 1rem;
   margin-bottom: 1rem;
-  padding-bottom: 1rem;
+  // padding-bottom: 1rem;
   white-space: nowrap;
   overflow: scroll;
   -ms-overflow-style: none; /* Internet Explorer 10+ */
